[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "futu-python-samples"
version = "0.1.0"
description = "Standalone Python examples for Futu OpenAPI SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["futu-api"]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools]
packages = []

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
